fix: Bump rimfrost-service-oul-management-regler-openapi version